fixed nav bar on small screens

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,10 @@ body {
     color: rgb(190, 0, 0);
 }
 
+.button {
+    margin: 1rem 0rem;
+}
+
 /* Nav Bar Stuff */
 
 
@@ -54,9 +58,57 @@ body {
     padding: 1rem;
 }
 
+.dropbtn {
+    background-color:rgba(40, 40, 40, 0.45);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    margin-right: 1rem;
+}
+
+.nav-dropdown {
+    position: relative;
+    display: none;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color:rgba(40, 40, 40, 0.5);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: white;
+    padding :12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color:rgba(40, 40, 40, 0.55);
+}
+
+.nav-dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.nav-dropdown:hover .dropbtn {
+    background-color:rgba(40, 40, 40, 0.55);
+}
+
 @media only screen and (max-width: 575px) {
-    .nav-list li a {
+    /* .nav-list li a {
         font-size: .70rem;
+    } */
+    .nav-list {
+        display: none;
+    }
+    .nav-dropdown {
+        display: inline-block;
     }
 }
 
